--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -8,3 +8,20 @@ commands:
   drop:
     description: Drop plugin by CubeStorm
     usage: /drop
+
+permissions:
+  drop.vip:
+    description: Allows to have extra chance to drop
+    default: op
+
+  drop.turbodrop:
+    description: Allows to have extra chance to drop
+    default: op
+
+  drop.*:
+    description: Allows to all
+    default: op
+    children: [
+      drop.vip
+      drop.turbodrop
+    ]
